--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Kasztandor</h1>
-        <p>It's test of github.io</p>
+        <p>It's test of github.io by Kasztandor</p>
     </body>
 </html>
